kust/kust/cluster/chaska-storage/catalog/stage2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  labels:
    app: kibana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  rules:
    - host: catalog-kibana.fcaus-f-storage.autodata.tech
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: catalog-kb-http
                port:
                  number: 5601
  tls:
    - secretName: fcaus-wildcard
      hosts:
        - catalog-kibana.fcaus-f-storage.autodata.tech
